# kanban

./: .env.example  .gitignore  AGENTS.md  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/app/: ai.py  alerts.py  auth.py  config.py  crud.py  db.py  main.py  models.py  routes.py  schemas.py  seed.py
backend/tests/: conftest.py  test_ai.py  test_ai_live.py  test_alerts.py  test_auth.py  test_boards.py  test_db.py  test_db_module.py  test_health.py  test_lifespan.py  test_migrations.py  test_routes.py
community_contributions/: mluck134.md
docs/: plan.md  status-summary.md
frontend/: .dockerignore  .gitignore  Dockerfile  eslint.config.mjs  package-lock.json  package.json  playwright.config.ts  vitest.config.ts  vitest.setup.ts
frontend/app/: globals.css  layout.tsx  page.test.tsx  page.tsx
frontend/components/: AddCardForm.test.tsx  AddCardForm.tsx  AdviceButton.test.tsx  AdviceButton.tsx  Board.test.tsx  Board.tsx  BoardSwitcher.test.tsx  BoardSwitcher.tsx  BottlenecksPanel.test.tsx  BottlenecksPanel.tsx  CardPreview.test.tsx  CardPreview.tsx  ChatPanel.test.tsx  ChatPanel.tsx  Column.test.tsx  Column.tsx  EditableColumnTitle.test.tsx  EditableColumnTitle.tsx  FilterBar.test.tsx  FilterBar.tsx  KanbanCard.test.tsx  KanbanCard.tsx  LoginForm.test.tsx  LoginForm.tsx
frontend/e2e/: kanban.spec.ts
frontend/lib/: alerts.test.ts  alerts.ts  api.test.ts  api.ts  auth.test.ts  auth.ts  boardReducer.test.ts  boardReducer.ts  initialData.ts  types.ts
